# dashd

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
agent/: config.example.toml  dashd-agent.spec  pyproject.toml
agent/dashd/: __main__.py  activity.py  aggregator.py  anthropic_oauth.py  ble_trust.py  bus.py  config.py  firmware_update.py  ipc_server.py  main.py  pet_reactor.py  proc_history.py  protocol.py  suggestions.py
agent/dashd/collectors/: base.py  calendar_msgraph.py  claude_code.py  codex.py  email_imap.py  git.py  github.py  gpu.py  imessage_macos.py  slack.py  system.py  teams.py  whatsapp.py
agent/dashd/pets/: __init__.py  catalog.py  converter.py  downloader.py  install.py  preview.py
agent/dashd/pets/data/: __init__.py
agent/dashd/pricing/: __init__.py  pricing.py
agent/dashd/transport/: __init__.py  base.py  ble_link.py  serial_link.py
agent/spike/: ble_spike_host.py
agent/tests/: test_activity.py  test_aggregator.py  test_aggregator_paths.py  test_anthropic_oauth.py  test_app_aggregation.py  test_auto_advance.py  test_ble_link.py  test_ble_trust.py  test_bus.py  test_claude_code_collector.py  test_codex_collector.py  test_github.py  test_gpu_collector.py  test_imessage.py  test_ipc.py  test_pets_catalog.py  test_pets_converter.py  test_pets_downloader.py  test_pets_install.py  test_pets_preview.py  test_proc_history.py  test_protocol.py  test_rates.py  test_suggestions.py  test_system_attribution.py
docs/: autostart.md  collectors.md  ipc.md  microsoft-graph-setup.md  packaging.md  protocol.md  whatsapp.md  wiring.md
firmware/: partitions.csv  platformio.ini
firmware/include/: ble_transport.h  button.h  config.h  data_store.h  default_pet.h  lgfx_panel.h  pages.h  (+8 more)
scripts/: uninstall.ps1  uninstall.sh
ui/: electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
(+54 files in other folders)
